add trantition with css and js

--- a/home.html
+++ b/home.html
@@ -8,41 +8,43 @@
   <title>Nusa Dua Artshop</title>
 </head>
 <body>
-  <div class="banner">
-    <img src="assets/img1.jpg" alt="">
+  <div class="banner hidden">
+    <img name="slide">
   </div>
 
-  <div class="content-top">
+  <div class="content-top hidden">
     <h2>What We Have</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam varius elit vel turpis tempor sodales. Nulla feugiat sapien sed tempor pellentesque. Proin libero sapien, pellentesque non neque non, commodo vestibulum est. In hac habitasse platea dictumst.</p>
   </div>
 
   <div class="content-mid">
-    <div class="part">
-      <img class="img-content-left" src="assets/img2.jpg" alt="">
+    <div class="part hidden">
+      <img class="img-content-left slide-left" src="assets/img2.jpg" alt="">
         <p class="p-left">Nullam congue sem quam, quis fermentum sapien convallis ornare. In ultricies arcu at tincidunt interdum. Donec lorem metus, maximus nec tincidunt eget,</p>
     </div>
 
-    <div class="part">
+    <div class="part hidden slide-right">
       <img class="img-content-right" src="assets/img3.jpg" alt="">
         <p class="p-right">Proin pretium, nibh ut imperdiet dictum, nulla nibh molestie ex, at bibendum mauris nibh id orci. Etiam eros enim, placerat malesuada lobortis sit amet, feugiat eu velit.</p>
     </div>
 
-    <div class="part">
+    <div class="part hidden slide-left">
       <img class="img-content-left" src="assets/img2.jpg" alt="">
         <p class="p-left">at condimentum ligula turpis ac tellus. Quisque vel lorem iaculis, imperdiet nisi sed, fermentum nulla. Nullam ac porta nibh, id lobortis libero. Donec quis tristique urna.</p>
     </div>
   </div>
 
-  <div class="address">
+  <div class="address hidden ">
     <h2>Location</h2>
     <p>Jl. Nusa Dua, Benoa, Kec. Kuta Sel., <br> Kabupaten Badung, Bali</p>
   </div>
-  <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d492.85834373846!2d115.22385747075306!3d-8.79858727226165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd2433b296eb88b%3A0xc5103b7879b0b7c9!2sNusadua%20art%20shop!5e0!3m2!1sid!2sid!4v1680919332099!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <iframe class="map hidden" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d492.85834373846!2d115.22385747075306!3d-8.79858727226165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd2433b296eb88b%3A0xc5103b7879b0b7c9!2sNusadua%20art%20shop!5e0!3m2!1sid!2sid!4v1680919332099!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-  <div class="copyright">
+  <div class="copyright hidden">
     <p>Copyright © 2023 by Raka | unsplash.com</p>
     <h3 style="padding-top: 10px;">under construction !</h3>
   </div>
+
 </body>
+<script src="style.js"></script>
 </html>
